<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Dialpad in the Phone app. -->
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<com.android.contacts.widget.ShenduDialpadLayout
    android:id="@+id/dialpad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/shendu_dialpad_top"
    android:paddingLeft="@dimen/shendu_dialpad_left"
    android:paddingRight="@dimen/shendu_dialpad_right"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/shendu_dial_bg">

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/one" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_one" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/two" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_two" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/three" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
           
            android:contentDescription="@string/description_image_button_three" />
    </TableRow>

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/four" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_four" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/five" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_five" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/six" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_six" />
    </TableRow>

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/seven" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_seven" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/eight" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_eight" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/nine" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_nine" />
    </TableRow>

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/star" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_star" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/zero" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_zero" />
        <com.android.contacts.dialpad.DialpadImageButton
            android:id="@+id/pound" style="@style/ShenDu_DialtactsDialpadButtonStyle"
            android:background="@drawable/shendu_dial_num_selector"
            android:contentDescription="@string/description_image_button_pound" />
    </TableRow>
</com.android.contacts.widget.ShenduDialpadLayout>
<ImageView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/shendu_dial_num_bg"
    />
</FrameLayout>
